tests/snapshots/run_wpt_conformance__litert_reduceMean_float16_0D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_mean.https.any.js reduceMean float16 0D constant tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceMean { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[] @bytes([254, 85]);
  }

  nodes {
    [reduceMeanOutput] = reduceMean(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMeanOutput; }
}
